Navbar layout fixes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: home
 ---
-<div style="background-image: url('{{ site.baseurl }}/assets/images/Didi-4.jpg'); background-size: cover; height: 900px;     background-repeat:   no-repeat;
+<div class="container-fluid" style="background-image: url('{{ site.baseurl }}/assets/images/Didi-4.jpg'); background-size: cover; height: 900px;     background-repeat:   no-repeat;
     background-position: center center;  ">
     <div class="row row-cols-1 row-cols-md-2" style="height: 100%;">
         <div class="col"></div>
