--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 layout: default
 title: home
 ---
-<div class="container-fluid" style="background-image: url('{{ site.baseurl }}/assets/images/Didi-4.jpg'); background-size: cover; height: 900px;     background-repeat:   no-repeat;
+<div class="container-fluid" style="background-image: url('{{ site.baseurl }}/assets/images/jasmina-01.jpeg'); background-size: cover; height: 900px;     background-repeat:   no-repeat;
     background-position: center center;  ">
     <div class="row row-cols-1 row-cols-md-2" style="height: 100%;">
         <div class="col"></div>
-        <div class="col d-flex flex-column justify-content-center align-items-center intro-pic" style="height: 100%;">
-            This is not Jasmina in the picture!
+        <div class="col d-flex flex-column justify-content-md-center pt-md-0 align-items-center intro-pic justify-content-start pt-5" style="height: 100%;">
+            This IS Jasmina in the picture!
         </div>
     </div>
 
